test/types/string/bradc/string2ints/badstring2uint64.chpl
var s = "1e";

var x64 = s:uint(64);
writeln("x64 is: ", x64);

